# TUTODECODE_APP

./: .flutter-plugins-dependencies  .gitignore  BUILD.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LEGAL.md  LICENSE  README.md  RELEASES.md  SECURITY.md  analysis.txt  analysis_output.txt  analyze_output.txt  analyze_output_utf8.txt  build_and_sign.ps1  clean_files.py  generate_play_assets.ps1  ghost_ai_analyze.txt  index.html  manifest.json  package-lock.json  package.json  pubspec.yaml  tailwind.config.js  test_output.txt  test_output_utf8.txt  vite.config.ts
.github/workflows/: build_release.yml  flutter_build.yml
android/app/: build.gradle.kts
assets/: courses.json  manifest.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/data/: courses_data.dart
lib/models/: chapter.dart
lib/pages/: admin.dart  ai_chat.dart  ai_config.dart  chapter.dart  dashboard.dart  home.dart  lab.dart  legal.dart  roadmap.dart
lib/providers/: app_provider.dart
lib/services/: ai_service.dart  editor_service.dart  ollama_service.dart  storage_service.dart  (+1 more)
linux/: CMakeLists.txt
public/: custom_courses.json  custom_courses.json.pre-sync.bak  index.html  manifest.webmanifest  output.css  sw.js  ultra_curriculum_2026.json
scripts/: generate-install-assets.cjs  import-custom-courses.cjs  prepare-hostverge-deploy.cjs  prepare-migration.js  run-vite-safe.cjs  setup-pocketbase-0.25.ps1  setup-pocketbase.ps1  sync-base-courses-to-custom.cjs  sync-web-assets.cjs  temp_run_migration.cjs  temp_run_migration.ts
src/: App.tsx  index.css  index.html  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  hardware-scan.json  terminal-pty.json
src-tauri/src/: hardware.rs  lib.rs  main.rs  terminal.rs
src/lib/: db.ts  (+7 more)
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt  sign_windows.ps1
(+139 files in other folders)
