[package]
name = "tutodecode-pro"
version = "1.0.0"
description = "TutoDeCode - Plateforme LMS interactive pour maîtriser Tauri v3 et Rust"
authors = ["TutoDeCode Team <team@tutodecode.com>"]
license = "MIT"
repository = "https://github.com/tutodecode/tutodecode-pro"
edition = "2021"
rust-version = "1.75"

[lib]
name = "tutodecode_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Core Tauri
tauri = { version = "2.10", features = [] }
tauri-plugin-shell = "2.3"
tauri-plugin-os = "2.3"
tauri-plugin-process = "2.3"
tauri-plugin-dialog = "2.3"

# Sérialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "time", "process", "sync"] }

# Utilitaires
uuid = { version = "1.6", features = ["v4"] }
chrono = "0.4"
once_cell = "1.19"

# Informations système
num_cpus = "1.16"

# PTY pour terminal natif (desktop uniquement)
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
portable-pty = "0.8"

# Windows-specific
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_System_Performance", "Win32_Graphics_Dxgi", "Win32_System_Threading"] }

# macOS-specific
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-foundation = "0.9"
core-graphics = "0.23"

# Linux-specific
[target.'cfg(target_os = "linux")'.dependencies]
pciid-parser = "0.3"

[profile.release]
# Optimisations maximales pour la production
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3
